--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ license = "MIT"
 repository = "https://github.com/Greyash-Dave/minigrep.git"
 
 [dependencies]
+atty = "0.2"
 
 [[bin]]
 name = "minigrep"
